--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+  <input type="file" name="file" id="file" />
   <h1 id="text"></h1>
-
+   
   <script src="app.js"></script>
 </body>
 </html>
